tests/errors/invalid_func_args.sbr
let foo = (a: int) => {
  printInt(a);
}

let main = () => {
  foo("bar");
}